tests/neg/semantic_static_local_nonconst_init.baa
// EXPECT: تهيئة المتغير الساكن

صحيح س = ١.

صحيح الرئيسية() {
    ساكن صحيح ع = س.
    إرجع ٠.
}
